feat: logout endpoint
